--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <input type="email" id="email" name="email"><br>
 </form>
 
-<script>
 
+<script>
+document.getElementById("btn-alert").addEventListener("click", function(){
+alert("Thank you for submitting the form!");});
 </script>
 </body>
-
+</html>
